--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -10,7 +10,8 @@
 	<nav>
 	  <ul>
 		  <li><a href="{{ url_for('utils.index') }}">Home</a>
-		  <li><a href="{{ url_for('utils.clipping') }}">Clip Downloader</a>
+		  <li><a href="{{ url_for('utils.clipper') }}">Clip Downloader</a>
+		  <li><a href="{{ url_for('utils.viewer') }}">Viewer Stats</a>
 	  </ul>
 	</nav>
   </header>
