--- a/main/templates/utils/clips.html
+++ b/main/templates/utils/clips.html
@@ -5,13 +5,10 @@
 {% endblock %}
 
 {% block content %}
-  <form method="POST">
-    <label for="client_id">Client ID</label>
-    <input name="client_id" id="client_id" required>
-    <label for="oauth">OAuth</label>
-    <input name="oauth" id="oauth" required>
-	<label for="broadcaster">Broadcaster</label>
-    <input name="broadcaster" id="broadcaster" required>
+  <form method="POST" action="">
+	Broadcaster: {{ form.broadcaster }}
+	Client ID: {{ form.client_id }}
+	OAuth: {{ form.oauth }}
     <input type="submit" value="Get Clips">
   </form>
 {% endblock %}
